# clamav-dbscan

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-watcher.sh  scan.py  watcher.c  watchsock.py
clamdavdb/: __init__.py  clamavdb.py  clamd.conf
watcher/: go.mod  watcher.go
watcher-golang/: go.mod  go.sum  watcher.go
watcher-golang/fanotify/: fswatcher.go  go.mod  go.sum  parsing.go
watcher-src/: CMakeLists.txt  watcher.c
watcher/fanotify/: fswatcher.go  parsing.go
